updated Korean translation

--- a/po/wesnoth-aoi/ko.po
+++ b/po/wesnoth-aoi/ko.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-05-30 20:47+0200\n"
-"PO-Revision-Date: 2011-09-28 13:00+0900\n"
+"PO-Revision-Date: 2011-10-01 22:19+0900\n"
 "Last-Translator: mistzone <drier22@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -65,33 +65,33 @@ msgid ""
 "\n"
 msgstr ""
 "유용한 전략들을 익혀 가면서 대륙에 도착한 첫번째 오크 무리로부터 엘프의 숲을 "
-"지켜라.\n"
+"지켜 냅시다.\n"
 "\n"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:35
 msgid "Campaign Design"
-msgstr ""
+msgstr "캠페인 설계"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:41
 msgid "Adaptation for mainline"
-msgstr ""
+msgstr "본편에 맞춰 수정해주신 분"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:47
 msgid "Post 1.4 story and gameplay improvements"
-msgstr ""
+msgstr "1.4 버전 이후 스토리와 게임플레이 개선"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:53
 msgid "Artwork and Graphics Design"
-msgstr ""
+msgstr "미술과 그래픽 디자인"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:60
 msgid "Editing, proofreading and gameplay testing"
-msgstr ""
+msgstr "편집, 교정 및 플레이 테스트"
 
 #. [scenario]: id=01_Defend_the_Forest
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:9
@@ -1258,7 +1258,7 @@ msgstr ""
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:288
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:128
 msgid "Alas, Erlornas, I have failed us..."
-msgstr ""
+msgstr "아아, Erlornas, 여러분을 실망시켜 드렸군요..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:306
