updated Japanese translation

--- a/po/wesnoth-help/ja.po
+++ b/po/wesnoth-help/ja.po
@@ -6,14 +6,14 @@
 # Nobuhito Okada <okyada@gmail.com>, 2005-2006.
 # MATSUMOTO Yuji <matumoto@marron.cias.osakafu-u.ac.jp>, 2005.
 # naoki iimura <amatubu@gmail.com>, 2005-2008.
-# IWAI, Masaharu <iwaim.sub@gmail.com>, 2010.
+# IWAI, Masaharu <iwaim.sub@gmail.com>, 2010-2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth svn-trunk\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-08-27 10:14+0200\n"
-"PO-Revision-Date: 2010-12-27 19:35+0900\n"
+"POT-Creation-Date: 2011-09-04 11:42+0200\n"
+"PO-Revision-Date: 2011-10-02 05:20+0900\n"
 "Last-Translator: IWAI, Masaharu <iwaim.sub@gmail.com>\n"
 "Language-Team: <wesnoth-ja-translate@lists.sourceforge.jp>\n"
 "Language: Japanese\n"
@@ -161,9 +161,8 @@ msgstr "<ref>dst='..geography' text='地理'</ref>"
 
 #. [topic]: id=caste
 #: data/core/encyclopedia/drakes.cfg:7
-#, fuzzy
 msgid "Caste"
-msgstr "城"
+msgstr ""
 
 #. [topic]: id=caste
 #: data/core/encyclopedia/drakes.cfg:8
@@ -188,7 +187,6 @@ msgstr ""
 
 #. [topic]: id=breeding_pen
 #: data/core/encyclopedia/drakes.cfg:19
-#, fuzzy
 msgid "Breeding Pen"
 msgstr "摂食"
 
@@ -335,9 +333,8 @@ msgstr ""
 
 #. [topic]: id=hatchling
 #: data/core/encyclopedia/drakes.cfg:91
-#, fuzzy
 msgid "Hatchling"
-msgstr "回復"
+msgstr ""
 
 #. [topic]: id=hatchling
 #: data/core/encyclopedia/drakes.cfg:92
@@ -349,9 +346,8 @@ msgstr ""
 
 #. [topic]: id=fledgling
 #: data/core/encyclopedia/drakes.cfg:97
-#, fuzzy
 msgid "Fledgling"
-msgstr "回復"
+msgstr ""
 
 #. [topic]: id=fledgling
 #: data/core/encyclopedia/drakes.cfg:98
@@ -429,9 +425,8 @@ msgstr ""
 
 #. [topic]: id=intendant
 #: data/core/encyclopedia/drakes.cfg:133
-#, fuzzy
 msgid "Intendant"
-msgstr "知的"
+msgstr ""
 
 #. [topic]: id=intendant
 #: data/core/encyclopedia/drakes.cfg:134
@@ -446,7 +441,6 @@ msgstr ""
 
 #. [topic]: id=swarm
 #: data/core/encyclopedia/drakes.cfg:139
-#, fuzzy
 msgid "Swarm"
 msgstr "群れ"
 
@@ -811,9 +805,8 @@ msgstr ""
 
 #. [topic]: id=heart_mountains
 #: data/core/encyclopedia/geography.cfg:146
-#, fuzzy
 msgid "Heart Mountains"
-msgstr "山"
+msgstr ""
 
 #. [topic]: id=heart_mountains
 #: data/core/encyclopedia/geography.cfg:147
@@ -966,7 +959,6 @@ msgstr "概要"
 
 #. [topic]: id=introduction_topic
 #: data/core/help.cfg:120
-#, fuzzy
 msgid ""
 "\n"
 "\n"
@@ -980,11 +972,12 @@ msgstr ""
 "\n"
 "\n"
 "<italic>text='Battle for Wesnoth'</italic> は、現代風ストラテジーゲームとは一"
-"風異なる、ターンベースのファンタジーストラテジーゲームです。 他のゲームがルー"
-"ルとゲームプレイの複雑さを目指しているのに対して、Battle for Wesnoth はルール"
-"とゲームプレイの両方がシンプルであるように心懸けています。しかしながら —この"
-"ためにゲームがつまらなくなるということではありません。これらの単純なルールか"
-"ら、学ぶのは簡単でもマスターするのが困難な豊富な戦術が生じるのです。"
+"風異なる、ターン制のファンタジーストラテジーゲームです。 他のゲームがルールと"
+"ゲームプレイの複雑さを目指しているのに対して、<italic>text='Battle for "
+"Wesnoth'</italic> はルールとゲームプレイの両方がシンプルであるように心懸けて"
+"います。しかしながら —このためにゲームがつまらなくなるということではありませ"
+"ん。これらの単純なルールから、学ぶのは簡単でもマスターするのが困難な豊富な戦"
+"術が生じるのです。"
 
 #. [topic]: id=fundamentals
 #: data/core/help.cfg:132
@@ -1050,7 +1043,6 @@ msgstr "ゲームについて"
 
 #. [topic]: id=about_game
 #: data/core/help.cfg:144
-#, fuzzy
 msgid ""
 "The game takes place over a series of battles, called "
 "<italic>text='scenarios'</italic>. Each scenario pits your troops against "
@@ -1060,16 +1052,17 @@ msgid ""
 "other people connected to that network. If your computer has a connection to "
 "the Internet, you can play against other people across the Internet."
 msgstr ""
-"ゲームは、シナリオと呼ばれる一連の戦闘の上で行われます。各シナリオは、あなた"
-"の軍隊を一つまたはそれ以上の敵の軍隊と戦わせます。コンピュータ相手や、交互に"
-"コンピュータ操作を入れかわる友達と一緒にプレイ（ホットシートプレイ）すること"
-"ができます。もしコンピュータがネットワークにつながっているなら、そのネット"
-"ワークに接続された他の人達と対戦することも可能です。インターネット接続があれ"
-"ば、インターネットを越えて他の人達と戦うことができます。"
+"ゲームは、<italic>text='シナリオ'</italic>と呼ばれる一連の戦闘の上で行われま"
+"す。各シナリオでは、あなたの軍隊は一つあるいは複数の敵の軍隊と戦うことになり"
+"ます。コンピュータ相手や、交互にコンピュータ操作を入れかわる友達と一緒にプレ"
+"イ（ホットシートプレイ）することができます。もしコンピュータがネットワークに"
+"つながっているなら、そのネットワークに接続された他の人達と対戦することも可能"
+"です。インターネット接続があれば、インターネット経由で他の人達と戦うことがで"
+"きます。"
 
+# [ja] 意訳: 一連の物語を織りなす複数のシナリオ
 #. [topic]: id=about_game
 #: data/core/help.cfg:146
-#, fuzzy
 msgid ""
 "\n"
 "\n"
@@ -1080,9 +1073,9 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"キャンペーンは、物語を伝えながら、話の続きとなる複数のシナリオからなっていま"
-"す。キャンペーンでは多くの場合、後のシナリオで再び使えるように最高の軍隊達を"
-"生き残らせるよう、より注意してプレイする必要があります。"
+"<italic>text='キャンペーン'</italic>は、一連の物語を織りなす複数のシナリオか"
+"らなっています。キャンペーンでは多くの場合、後のシナリオで再び使うための最高"
+"の軍隊達を生き残らせるため、より注意してプレイする必要があります。"
 
 #. [topic]: id=victory_and_defeat
 #: data/core/help.cfg:152
@@ -1091,7 +1084,6 @@ msgstr "勝利と敗北"
 
 #. [topic]: id=victory_and_defeat
 #: data/core/help.cfg:153
-#, fuzzy
 msgid ""
 "Pay careful attention to the <bold>text='Objectives'</bold> pop-up box at "
 "the beginning of each scenario. Usually you will achieve victory by killing "
@@ -1100,15 +1092,15 @@ msgid ""
 "designated point, say, or rescuing someone, or solving a puzzle, or holding "
 "out against a siege until a certain number of turns have elapsed."
 msgstr ""
-"それぞれのシナリオの開始時に表示される目標のポップアップボックスに注意してく"
-"ださい。通常は敵のリーダーすべてを倒せば勝利し、あなたのリーダーが殺されるこ"
-"とだけが敗北となるでしょう。しかしシナリオによってはほかの勝利目標があるかも"
-"しれません。例えば、リーダーを指定された場所に移動させるとか、誰かを助けると"
-"か、パズルを解くとか、あるターン数が過ぎるまで包囲攻撃に対抗するとか。"
+"それぞれのシナリオ開始時に表示される<bold>text='目標'</bold>のポップアップ"
+"ボックスに注意してください。通常は敵のリーダーすべてを倒せば勝利し、あなたの"
+"リーダーが殺されることだけが敗北となるでしょう。しかしシナリオによってはほか"
+"の勝利目標があるかもしれません。例えば、リーダーを指定された場所に移動させる"
+"とか、誰かを助けるとか、パズルを解くとか、指定されたターン数が過ぎるまで包囲"
+"攻撃に対抗するとか。"
 
 #. [topic]: id=victory_and_defeat
 #: data/core/help.cfg:155
-#, fuzzy
 msgid ""
 "\n"
 "\n"
@@ -1173,7 +1165,6 @@ msgstr ""
 
 #. [topic]: id=recruit_and_recall
 #: data/core/help.cfg:167
-#, fuzzy
 msgid ""
 "\n"
 "\n"
@@ -1201,7 +1192,6 @@ msgstr ""
 
 #. [topic]: id=recruit_and_recall
 #: data/core/help.cfg:171
-#, fuzzy
 msgid ""
 "\n"
 "\n"
@@ -1231,13 +1221,11 @@ msgstr ""
 
 #. [topic]: id=orbs
 #: data/core/help.cfg:180
-#, fuzzy
 msgid " green if it hasn’t moved this turn,"
 msgstr "このターンにまだ動いていないなら緑色、"
 
 #. [topic]: id=orbs
 #: data/core/help.cfg:181
-#, fuzzy
 msgid " yellow if it has moved, but could still move further or attack, or"
 msgstr "移動したがまだ動いたり攻撃したりできるなら黄色、"
 
@@ -1249,13 +1237,11 @@ msgstr ""
 
 #. [topic]: id=orbs
 #: data/core/help.cfg:183
-#, fuzzy
 msgid " blue if the unit is an ally you do not control."
-msgstr "あなたが動かしていない同盟のユニットなら、宝珠は青色です。"
+msgstr "あなたが操作できない同盟のユニットなら、宝珠は青色です。"
 
 #. [topic]: id=orbs
 #: data/core/help.cfg:184
-#, fuzzy
 msgid " Enemy units have no orb on top of their energy bar."
 msgstr "敵ユニットには、体力バーの上に宝珠がありません。"
 
@@ -1478,7 +1464,6 @@ msgstr ""
 
 #. [topic]: id=combat
 #: data/core/help.cfg:231
-#, fuzzy
 msgid ""
 "\n"
 "\n"
@@ -1513,7 +1498,6 @@ msgstr ""
 
 #. [topic]: id=combat
 #: data/core/help.cfg:235
-#, fuzzy
 msgid ""
 "\n"
 "\n"
@@ -1693,13 +1677,6 @@ msgstr "時刻"
 
 #. [topic]: id=time_of_day
 #: data/core/help.cfg:268
-#, fuzzy
-#| msgid ""
-#| "The time of day affects the damage of certain units as follows:\n"
-#| " Lawful units get +25% damage in daytime, and −25% damage at night.\n"
-#| " Chaotic units get +25% damage at night, and −25% in daytime.\n"
-#| " Liminal units get +25% damage during twilight.\n"
-#| " Neutral units are unaffected by the time of day."
 msgid ""
 "The time of day affects the damage of certain units as follows:\n"
 " Lawful units get +25% damage in daytime, and −25% damage at night.\n"
@@ -1711,7 +1688,6 @@ msgstr ""
 "す。\n"
 " 混沌ユニットは夜間は +25% のダメージ修正、昼間は −25% のダメージ修正を得ま"
 "す。\n"
-" 黄昏ユニットは夕方は +25% のダメージ修正を得ます。\n"
 " 中立ユニットは時間の影響を受けません。"
 
 #. [topic]: id=time_of_day
@@ -2546,7 +2522,6 @@ msgstr ""
 #. [topic]: id=traits_aged
 #: data/core/help.cfg:475
 #, fuzzy
-#| msgid "trait^Undead"
 msgid "trait^Aged"
 msgstr "アンデッド"
 
@@ -4037,42 +4012,36 @@ msgstr ""
 #. [time]: id=second_watch_hour1
 #: data/core/macros/schedules.cfg:191
 #, fuzzy
-#| msgid "Second Watch"
 msgid "Second Watch — First Hour"
 msgstr "深夜"
 
 #. [time]: id=second_watch_hour2
 #: data/core/macros/schedules.cfg:203
 #, fuzzy
-#| msgid "Second Watch"
 msgid "Second Watch — Second Hour"
 msgstr "深夜"
 
 #. [time]: id=second_watch_hour3
 #: data/core/macros/schedules.cfg:215
 #, fuzzy
-#| msgid "Second Watch"
 msgid "Second Watch — Third Hour"
 msgstr "深夜"
 
 #. [time]: id=second_watch_hour4
 #: data/core/macros/schedules.cfg:227
 #, fuzzy
-#| msgid "Second Watch"
 msgid "Second Watch — Fourth Hour"
 msgstr "深夜"
 
 #. [time]: id=second_watch_hour5
 #: data/core/macros/schedules.cfg:239
 #, fuzzy
-#| msgid "Second Watch"
 msgid "Second Watch — Fifth Hour"
 msgstr "深夜"
 
 #. [time]: id=second_watch_hour6
 #: data/core/macros/schedules.cfg:251
 #, fuzzy
-#| msgid "Second Watch"
 msgid "Second Watch — Sixth Hour"
 msgstr "深夜"
 
@@ -4183,7 +4152,6 @@ msgstr " このユニットには簡易な回復能力があります。"
 
 #: data/core/macros/special-notes.cfg:17
 #, fuzzy
-#| msgid " This unit is capable of basic healing."
 msgid " This unit is capable of rapid healing."
 msgstr " このユニットには簡易な回復能力があります。"
 
@@ -4330,9 +4298,6 @@ msgstr ""
 
 #: data/core/macros/special-notes.cfg:77
 #, fuzzy
-#| msgid ""
-#| " The unit has magical attacks, which always have a high chance of hitting "
-#| "an opponent."
 msgid ""
 " This unit has magical attacks, which always have a high chance of hitting "
 "an opponent."
@@ -4367,8 +4332,8 @@ msgid ""
 " The length of this unit’s weapon allows it to strike first in melee, even "
 "in defense."
 msgstr ""
-" このユニットの武器の長さのおかげで、格闘攻撃で先に攻撃することができます。防"
-"御時でさえも。"
+" このユニットの武器の長さのおかげで、たとえ防御時であっても、格闘攻撃で先に攻"
+"撃します。"
 
 #: data/core/macros/special-notes.cfg:92
 msgid ""
@@ -4523,10 +4488,8 @@ msgstr "野生"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-#, fuzzy
-#| msgid "Receive only 40% defense in land-based villages"
 msgid "Receive only 50% defense in land-based villages"
-msgstr "陸にある村では防御が 40% になってしまいます"
+msgstr "陸にある村では防御が 50% になってしまいます"
 
 #. [trait]: id=weak
 #: data/core/macros/traits.cfg:208
@@ -5044,8 +5007,6 @@ msgstr "モンスター"
 
 #. [race]: id=monster
 #: data/core/units.cfg:215
-#, fuzzy
-#| msgid "race^Monster"
 msgid "race+female^Monster"
 msgstr "モンスター"
 
@@ -5069,8 +5030,6 @@ msgstr "ナーガ"
 
 #. [race]: id=naga
 #: data/core/units.cfg:225
-#, fuzzy
-#| msgid "race^Nagani"
 msgid "race^Nagini"
 msgstr "ナガニ"
 
@@ -5412,10 +5371,8 @@ msgstr "狼"
 
 #. [race]: id=wolf, description=
 #: data/core/units.cfg:303
-#, fuzzy
-#| msgid "race+female^Elf"
 msgid "race+female^Wolf"
-msgstr "エルフ族"
+msgstr "狼"
 
 #. [race]: id=wolf, description=
 #: data/core/units.cfg:304
@@ -5434,50 +5391,38 @@ msgstr "ウーズ"
 
 #. [race]: id=khalifate
 #: data/core/units.cfg:324
-#, fuzzy
-#| msgid "race^Human"
 msgid "race^Khalifate Human"
-msgstr "人間族"
+msgstr "カリフェイト族"
 
 #. [race]: id=khalifate
 #: data/core/units.cfg:325
-#, fuzzy
-#| msgid "race+female^Human"
 msgid "race+female^Khalifate Human"
-msgstr "人間族"
+msgstr "カリフェイト族"
 
 #. [race]: id=khalifate
 #: data/core/units.cfg:326
-#, fuzzy
-#| msgid "race+plural^Mechanical"
 msgid "race+plural^Khalifate"
-msgstr "機械"
+msgstr "カリフェイト"
 
 #. [race]: id=khalifate
 #: data/core/units.cfg:327
 msgid "This race does not have a description yet."
-msgstr ""
+msgstr "この一団の説明はまだありません。"
 
 #. [race]: id=falcon, description=
 #: data/core/units.cfg:336
-#, fuzzy
-#| msgid "race^Human"
 msgid "race^Falcon"
-msgstr "人間族"
+msgstr "鷹"
 
 #. [race]: id=falcon, description=
 #: data/core/units.cfg:337
-#, fuzzy
-#| msgid "race+female^Human"
 msgid "race+female^Falcon"
-msgstr "人間族"
+msgstr "鷹"
 
 #. [race]: id=falcon, description=
 #: data/core/units.cfg:338
-#, fuzzy
-#| msgid "race^Humans"
 msgid "race^Falcons"
-msgstr "人間族"
+msgstr "鷹"
 
 #: src/help.cpp:51
 msgid "Help"
