--- a/po/wesnoth-units/ja.po
+++ b/po/wesnoth-units/ja.po
@@ -5,14 +5,14 @@
 # Nobuhito Okada <okyada@gmail.com>, 2005-2006.
 # MATSUMOTO Yuji <matumoto@marron.cias.osakafu-u.ac.jp>, 2005.
 # naoki iimura <amatubu@gmail.com>, 2005-2008.
-# IWAI, Masaharu <iwaim.sub@gmail.com>, 2010.
+# IWAI, Masaharu <iwaim.sub@gmail.com>, 2010-2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth svn-trunk\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-08-10 11:40+0200\n"
-"PO-Revision-Date: 2011-01-02 23:37+0900\n"
+"POT-Creation-Date: 2011-09-04 11:42+0200\n"
+"PO-Revision-Date: 2011-10-02 05:06+0900\n"
 "Last-Translator: IWAI, Masaharu <iwaim.sub@gmail.com>\n"
 "Language-Team: <wesnoth-ja-translate@lists.sourceforge.jp>\n"
 "Language: Japanese\n"
@@ -3309,8 +3309,6 @@ msgstr ""
 #: data/core/units/khalifate/Mighwar.cfg:26
 #: data/core/units/khalifate/Monawish.cfg:25
 #: data/core/units/khalifate/Shuja.cfg:22
-#, fuzzy
-#| msgid "longsword"
 msgid "long sword"
 msgstr "長剣"
 
@@ -3350,7 +3348,7 @@ msgstr ""
 #: data/core/units/khalifate/Tabib.cfg:23
 #: data/core/units/khalifate/Tineen.cfg:23
 msgid "There is currently no description available for this unit."
-msgstr ""
+msgstr "今はこのユニットの説明はありません。"
 
 #. [attack]: type=pierce
 #: data/core/units/khalifate/Batal.cfg:31
@@ -3360,14 +3358,12 @@ msgstr ""
 #: data/core/units/khalifate/Rami.cfg:32
 #: data/core/units/khalifate/Saree.cfg:32
 msgid "composite bow"
-msgstr ""
+msgstr "合成弓"
 
 #. [unit_type]: id=Elder Falcon, race=falcon
 #: data/core/units/khalifate/Elder_Falcon.cfg:4
-#, fuzzy
-#| msgid "Elder Mage"
 msgid "Elder Falcon"
-msgstr "老魔術師"
+msgstr "老鷹"
 
 #. [unit_type]: id=Elder Falcon, race=falcon
 #: data/core/units/khalifate/Elder_Falcon.cfg:21
@@ -3376,17 +3372,19 @@ msgid ""
 "them. Their dives can be so fast that stories abound of them taking a foe’s "
 "head clean off."
 msgstr ""
+"数多くの危機を乗り越えた鷹です。敵の頭部を跳ね飛ばしてしまうほど速く突進しま"
+"す。"
 
 #. [attack]: type=pierce
 #: data/core/units/khalifate/Elder_Falcon.cfg:35
 #: data/core/units/khalifate/Falcon.cfg:34
 msgid "beak"
-msgstr ""
+msgstr "くちばし"
 
 #. [unit_type]: id=Falcon, race=falcon
 #: data/core/units/khalifate/Falcon.cfg:4
 msgid "Falcon"
-msgstr ""
+msgstr "鷹"
 
 #. [unit_type]: id=Faris, race=khalifate
 #: data/core/units/khalifate/Faris.cfg:4
@@ -3403,7 +3401,7 @@ msgstr ""
 #: data/core/units/khalifate/Khalid.cfg:35
 #: data/core/units/khalifate/Shuja.cfg:34
 msgid "shield bash"
-msgstr ""
+msgstr "盾による強打"
 
 #. [unit_type]: id=Hadaf, race=khalifate
 #: data/core/units/khalifate/Hadaf.cfg:4
@@ -3440,7 +3438,7 @@ msgstr ""
 #: data/core/units/khalifate/Rami.cfg:23
 #: data/core/units/khalifate/Saree.cfg:23
 msgid "cavalry sword"
-msgstr ""
+msgstr "騎兵用剣"
 
 #. [unit_type]: id=Jundi, race=khalifate
 #: data/core/units/khalifate/Jundi.cfg:4
@@ -3519,16 +3517,14 @@ msgstr ""
 #: data/core/units/khalifate/Qatif-al-nar.cfg:27
 #: data/core/units/khalifate/Tineen.cfg:27
 msgid "naphtha attack"
-msgstr ""
+msgstr "ナフサ攻撃"
 
 #. [attack]: type=fire
 #: data/core/units/khalifate/Naffat.cfg:36
 #: data/core/units/khalifate/Qatif-al-nar.cfg:36
 #: data/core/units/khalifate/Tineen.cfg:36
-#, fuzzy
-#| msgid "fire claws"
 msgid "fire arrow"
-msgstr "炎の爪"
+msgstr "火矢"
 
 #. [unit_type]: id=Qanas, race=khalifate
 #: data/core/units/khalifate/Qanas.cfg:4
@@ -3561,7 +3557,7 @@ msgstr ""
 #. [unit_type]: id=Saree, race=khalifate
 #: data/core/units/khalifate/Saree.cfg:4
 msgid "Saree"
-msgstr ""
+msgstr "シャリィ"
 
 #. [unit_type]: id=Saree, race=khalifate
 #: data/core/units/khalifate/Saree.cfg:18
@@ -4122,14 +4118,14 @@ msgstr "顎爪"
 #. [unit_type]: id=Tentacle of the Deep, race=monster
 #: data/core/units/monsters/Tentacle.cfg:4
 msgid "Tentacle of the Deep"
-msgstr "深淵のテンタクル"
+msgstr "深淵からの触手"
 
 #. [unit_type]: id=Tentacle of the Deep, race=monster
 #: data/core/units/monsters/Tentacle.cfg:22
 msgid ""
 "Tentacles of the Deep are the appendages of some greater monster that lurks "
 "below the waves."
-msgstr "深淵のテンタクルは、波の下に隠れている何らかの巨大な怪物の触手です。"
+msgstr "波の下に隠れている何らかの巨大な怪物の触手です。"
 
 #. [unit_type]: id=Water Serpent, race=monster
 #: data/core/units/monsters/Water_Serpent.cfg:5
@@ -4169,17 +4165,13 @@ msgstr ""
 
 #. [unit_type]: id=Direwolf, race=wolf
 #: data/core/units/monsters/Wolf_Dire.cfg:4
-#, fuzzy
-#| msgid "Direwolf Rider"
 msgid "Direwolf"
-msgstr "ダイアウルフライダー"
+msgstr "ダイアウルフ"
 
 #. [unit_type]: id=Great Wolf, race=wolf
 #: data/core/units/monsters/Wolf_Great.cfg:4
-#, fuzzy
-#| msgid "Great Troll"
 msgid "Great Wolf"
-msgstr "グレートトロル"
+msgstr "グレートウルフ"
 
 #. [unit_type]: id=Yeti, race=monster
 #: data/core/units/monsters/Yeti.cfg:4
@@ -4249,13 +4241,6 @@ msgstr "女ミュルミドーン"
 
 #. [female]
 #: data/core/units/nagas/Myrmidon.cfg:97
-#, fuzzy
-#| msgid ""
-#| "The most practiced of the nagani blademasters are initiated into the "
-#| "caste of the Myrmidon, masters of their twin-bladed art. They strike as "
-#| "fast as the snakes which they resemble, and dance away from attacks with "
-#| "grace. Not only are they potent enemies on any open terrain, but their "
-#| "ability to swim allows them a deadly mobility."
 msgid ""
 "The most practiced of the nagini blademasters are initiated into the caste "
 "of the Myrmidon, masters of their twin-bladed art. They strike as fast as "
@@ -4295,14 +4280,6 @@ msgstr "女ナーガの熟練戦士"
 
 #. [female]
 #: data/core/units/nagas/Warrior.cfg:94
-#, fuzzy
-#| msgid ""
-#| "Many of the young warriors of the nagani aspire for the day when they "
-#| "merit their second blade. Their martial practice of using twin blades is "
-#| "wholly unlike that of the Orcs and other races, for they have begun to "
-#| "learn the art of using their serpentine form to best effect, twisting and "
-#| "turning to dodge from blows. This makes them potent on land, but the "
-#| "friction of water greatly impedes their ability to do this."
 msgid ""
 "Many of the young warriors of the nagini aspire for the day when they merit "
 "their second blade. Their martial practice of using twin blades is wholly "
@@ -6063,5 +6040,6 @@ msgstr ""
 #~ "\n"
 #~ "特記事項:"
 
+#, fuzzy
 #~ msgid "Longbow"
 #~ msgstr "大弓"
